--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/native": "^7.0.3",
     "expo": "^52.0.31",
     "expo-constants": "~17.0.5",
+    "expo-font": "~13.0.3",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.6",
+    "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
@@ -26,13 +28,13 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-appwrite": "^0.7.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.10",
-    "expo-font": "~13.0.3",
-    "expo-splash-screen": "~0.29.21"
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
